--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"
         defer></script>
-    <script src="assets/js/script.js" defer></script>
-    <script src="node_modules/intro.js/intro.js" defer></script>
+    <script src="assets/js/script.js" type="text/javascript" defer></script>
+    <script src="node_modules/intro.js/intro.js" type="text/javascript" defer></script>
 </head>
 
 <body class="light-theme">
@@ -35,144 +35,152 @@
                 <h1 class="text-center text-nowrap m-0"><span class="cy">Ninjas Negyddol</span><span class="en">Negative
                         Ninjas</span></h1>
             </div>
-            <div class="col-2 p-0 my-auto">
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="btn-sound" data-intro="Toggle sound on and off here" data-step="1">
-                    <label class="form-check-label" for="btn-sound"><i
-                        class="fas fa-volume-up"></i></label>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="btn-lang" data-intro="Change between Welsh and English here" data-step="2">
-                    <label class="form-check-label" for="btn-lang"><i
-                        class="fas fa-language"></i>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="btn-dark" data-intro="Toggle dark mode" data-step="3">
-                    <label class="form-check-label" for="btn-dark"><i
-                        class="fas fa-moon"></i>
-                </div>
+            <div class="col-2 p-0 text-center my-auto">
+                <button type="button" class="btn btn-header my-auto" id="btn-home" data-intro="Return to home screen and choose your level" data-step="3">
+                    <i class='fas fa-cog'></i>
+                </button>
             </div>
         </div>
-        <div class="game-intro container">
-            <div class="home-info text-center smaller col-10 mx-auto p-2">
-                <span class="cy lead">
-                    <p>Atebwch cwestiynau tablau lluosi sy'n cynnwys rhifau negyddol i drechu'r ddreigiau.
-                        <br><strong>Gallwch chi ennill y teitl Ninja Negyddol Gwregys Du?</strong></p>
-                </span>
-                <span class="en lead">
-                    <p>Answer times tables questions including negative numbers to defeat the dragons.
-                        <br><strong>Can you become a black belt negative ninja?</strong></p>
-                </span>
+        <div class="question-area container my-auto text-center">
+            <div class="row">
+                <h2><span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r draig
+                        i gyflawni eich gwregys <span id="gwregys-presennol">Blank</span></span><span
+                        class="en"><span id="current-belt">Blank</span> belt</span></h2>
             </div>
-            <h2 class="text-center"><span class="cy">
-                    Dewiswch eich lefel i ennill eich gwregys:</span><span class="en">Choose your level to earn your
-                    belt:</span>
-            </h2>
-            <div class="game-settings row">
-                <div class="row mx-auto">
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="0" checked>
-                        <img class="belt-image" src="assets/images/white.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="1">
-                        <img class="belt-image" src="assets/images/yellow.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="2">
-                        <img class="belt-image" src="assets/images/orange.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="3">
-                        <img class="belt-image" src="assets/images/green.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="4">
-                        <img class="belt-image" src="assets/images/purple.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="5">
-                        <img class="belt-image" src="assets/images/blue.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="6">
-                        <img class="belt-image" src="assets/images/brown.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="7">
-                        <img class="belt-image" src="assets/images/red.png">
-                    </label>
-                    <label class="col-4 text-center">
-                        <input type="radio" name="level" value="8">
-                        <img class="belt-image" src="assets/images/black.png">
-                    </label>
-                </div>
-                <div class="row">
-                    <button type="button" class="btn btn--black btn-start col-3 mx-auto m-2"><span class="cy">Chwarae</span><span
-                        class="en">Play</span></button>
-                </div>
+            <div class="question-row row">
+                <div class="display-4 col-2" id="operand1">0</div>
+                <div class="display-4 col-1" id="operator">x</div>
+                <div class="display-4 col-2" id="operand2">0</div>
+                <div class="display-4 col-1">=</div>
+                <input class="display-4 col-4" id="answer-box" type="number" autofocus required data-intro="Submit your answer here" data-step="2">
+                <button id="btn-submit" class="btn display-4 my-auto m-2 col-1"><i class="fas fa-arrow-right"></i></button>
             </div>
         </div>
-        <div class="game-area container text-center mt-5">
-            <div class="game-area game-header row">
-                <div class="col">
+        <div class="fight-scene container">
+            <div class="row">
+                <div class="ninja col-lg-3 col-md-4 col-5" data-intro="Answer a question correctly and you will throw a ninja star at the dragon. Keep answering questions correctly to win" data-step="6">
+                    <div class="row p-0 progress">
+                        <div id="ninja-progress" class="progress-bar bg-success p-0"
+                            role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                    </div>
                     <div class="row">
-                        <h2><span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r dihiryn
-                                i gyflawni eich gwregys <span id="gwregys-presennol">Blank</span></span><span
-                                class="en"><span id="current-belt">Blank</span> belt</span></h2>
+                        <img id="ninja-img" src="assets/images/ninja0.png">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-4 col-2 fight-container my-auto">
+                    <img id="ninja-star" src="assets/images/ninja-star.png">
+                    <img id="fire-ball" src="assets/images/fire-ball.png">
+                </div>
+                <div class="dragon col-lg-3 col-md-4 col-5">
+                    <div class="row progress">
+                        <div id="dragon-progress" class="progress-bar bg-success p-0"
+                            role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                    </div>
+                    <div class="row">
+                        <img id="dragon-img" src="assets/images/dragon0.png">
                     </div>
                 </div>
             </div>
-            <div class="question-area container my-auto">
-                <span class="display-4" id="operand1">0</span>
-                <span class="display-4" id="operator">x</span>
-                <span class="display-4" id="operand2">0</span>
-                <span class="display-4">=</span>
-                <input class="display-4 w-25" id="answer-box" type="number" autofocus required data-intro="Submit your answer here" data-step="2">
-                <button id="btn-submit" class="btn display-4 my-auto m-2"><i class="fas fa-arrow-right"></i></button>
+        </div>
+        <div class="row footer py-2">
+            <div class="col-6 my-auto">
+                <span class="cy lead float-start my-auto">
+                    <p>Sgor: </p>
+                </span>
+                <span class="en lead float-start my-auto">
+                    <p>Score: </p>
+                </span>
+                <p class="lead float-start my-auto"> 
+                    <i class="fas fa-check" data-intro="View how many correct answers you have made" data-step="4"></i><span id="correct">0</span>
+                    <i class="fas fa-times" data-intro="View how many incorrect answers you have made" data-step="5"></i><span id="incorrect">0</span>
+                </p>
             </div>
-            <div class="game-area container">
-                <div class="row fight-scene">
-                    <div class="ninja col-md-3 col-sm-4 col-5" data-intro="Answer a question correctly and you will throw a ninja star at the dragon. Keep answering questions correctly to win" data-step="6">
-                        <div class="row p-0 progress">
-                            <div id="ninja-progress" class="progress-bar bg-success p-0"
-                                role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
-                                aria-valuemax="100"></div>
+            <div class="col-6 my-auto">
+                <a id="btn-contact" class="float-end" href="https://github.com/chelsea-designs"><i class="fab fa-github"></i><span class="cy"> Cyswllt</span><span class="en"> Contact</span></a>
+            </div>
+        </div>
+        <!-- Settings Modal -->
+        <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModal" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-body text-center">
+                        <div class="home-info text-center smaller col-10 mx-auto p-2">
+                            <span class="cy lead">
+                                <p>Atebwch cwestiynau tablau lluosi sy'n cynnwys rhifau negyddol i drechu'r ddreigiau.
+                                    <br><strong>Gallwch chi ennill y teitl Ninja Negyddol Gwregys Du?</strong></p>
+                            </span>
+                            <span class="en lead">
+                                <p>Answer times tables questions including negative numbers to defeat the dragons.
+                                    <br><strong>Can you become a black belt negative ninja?</strong></p>
+                            </span>
                         </div>
                         <div class="row">
-                            <img id="ninja-img" src="assets/images/ninja0.png">
+                            <div class="col-4 form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="btn-sound" data-intro="Toggle sound on and off here" data-step="1">
+                                <label class="form-check-label" for="btn-sound"><i
+                                    class="fas fa-volume-up"></i></label>
+                            </div>
+                            <div class="col-4 form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="btn-lang" data-intro="Change between Welsh and English here" data-step="2">
+                                <label class="form-check-label" for="btn-lang"><i
+                                    class="fas fa-language"></i>
+                            </div>
+                            <div class="col-4 form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="btn-dark" data-intro="Toggle dark mode" data-step="3">
+                                <label class="form-check-label" for="btn-dark"><i
+                                    class="fas fa-moon"></i>
+                            </div>
                         </div>
+                        <h2 class="text-center"><span class="cy">
+                                Dewiswch eich lefel i ennill eich gwregys:</span><span class="en">Choose your level to earn your
+                                belt:</span>
+                        </h2>
+                        <div class="game-settings row">
+                            <div class="row mx-auto">
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="0" checked>
+                                    <img class="belt-image" src="assets/images/white.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="1">
+                                    <img class="belt-image" src="assets/images/yellow.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="2">
+                                    <img class="belt-image" src="assets/images/orange.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="3">
+                                    <img class="belt-image" src="assets/images/green.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="4">
+                                    <img class="belt-image" src="assets/images/purple.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="5">
+                                    <img class="belt-image" src="assets/images/blue.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="6">
+                                    <img class="belt-image" src="assets/images/brown.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="7">
+                                    <img class="belt-image" src="assets/images/red.png">
+                                </label>
+                                <label class="col-4 text-center">
+                                    <input type="radio" name="level" value="8">
+                                    <img class="belt-image" src="assets/images/black.png">
+                                </label>
+                            </div>
                     </div>
-                    <div class="col-md-6 col-sm-4 col-2 fight-container my-auto">
-                        <img id="ninja-star" src="assets/images/ninja-star.png">
-                        <img id="fire-ball" src="assets/images/fire-ball.png">
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn--black btn-start col-3 mx-auto m-2"><span class="cy">Chwarae</span><span
+                            class="en">Play</span></button>
                     </div>
-                    <div class="dragon col-md-3 col-sm-4 col-5">
-                        <div class="row progress">
-                            <div id="dragon-progress" class="progress-bar bg-success p-0"
-                                role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
-                                aria-valuemax="100"></div>
-                        </div>
-                        <div class="row">
-                            <img id="dragon-img" src="assets/images/dragon0.png">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row footer py-2">
-                <div class="col-4 my-auto">
-                    <p class="lead float-start my-auto">Score:
-                        <i class="fas fa-check" data-intro="View how many correct answers you have made" data-step="4"></i> <span id="correct">0</span>
-                        <i class="fas fa-times" data-intro="View how many incorrect answers you have made" data-step="5"></i> <span id="incorrect">0</span>
-                    </p>
-                </div>
-                <div class="col-4 my-auto">
-                    <a href="https://github.com/chelsea-designs"><i class="fab fa-github"></i> Contact Developer</a>
-                </div>
-                <div class="col-4 my-auto">
-                    <button type="button" class="btn float-end my-auto" id="btn-home" data-intro="Return to home screen and choose your level" data-step="3">
-                        <i class='fas fa-home'></i> Return to home
-                    </button>
                 </div>
             </div>
         </div>
